--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,10 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition: all 0.5s;
 }
+.searchbar {
+  width: 250px;
+  height: 35px;
+  border-radius: 30px;
+  text-align: center;
+  border: 2px solid;
+}
