--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,28 @@
   text-align: center;
   border: 2px solid;
 }
+.card-pic-btn {
+  background-color: none;
+  border: none;
+  padding: 0;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 75%;
+  height: 100vh;
+  background-color: rgba(240, 248, 255, 0.343);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  position: relative;
+  padding: 32px;
+  width: 100%;
+  max-width: 640px;
+  background-color: antiquewhite;
+}
